--- a/nodejs-project/package.json
+++ b/nodejs-project/package.json
@@ -13,7 +13,8 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "pg": "^7.9.0",
-    "pug": "~2.0.3"
+    "pug": "~2.0.3",
+    "truncate-html": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
