--- a/nodejs-project/package.json
+++ b/nodejs-project/package.json
@@ -14,7 +14,7 @@
     "morgan": "~1.9.0",
     "pg": "^7.9.0",
     "pug": "~2.0.3",
-    "truncate-html": "^1.0.1"
+    "striptags": "^3.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
